--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,69 @@ button {
   button:hover {
     background-color: #f5f5f5; /* Add a different background color on hover */
   }
+
+/* Style for the info box container */
+.info-box {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 15px;
+    border: 1px solid rgb(26, 25, 25);
+    z-index: 1000;
+    display: none;
+    border-radius: 2em;
+    text-align: justify;
+  }
+
+h2 {
+text-align: center;
+}
+
+p {
+text-align: justify;
+} 
+
+.icon {
+    max-width: 100%; /* Ensure the image doesn't exceed the container's width */
+    padding: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
+
+/* Style the pop-up container */
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9999;
+  }
+  
+  /* Style the pop-up content */
+  .popup-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+  }
+  
+  /* Style the close button */
+  .popup-content button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
