--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ html, body {
     z-index: 1000;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
 /* Custom button styles */
@@ -139,3 +140,11 @@ text-align: left;
     padding: 0; /* Remove any padding */
   }
   
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
